--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,3 +35,9 @@ Metrics/CyclomaticComplexity:
 
 Metrics/PerceivedComplexity:
   Max: 15
+
+Metrics/BlockLength:
+  Max: 80
+
+Metrics/ClassLength:
+  Max: 250
