--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,5 @@
 AllCops:
   TargetRubyVersion: 2.6
-  Exclude:
-    - '**/db/schema.rb'
 
 Style/StringLiterals:
   Enabled: true
@@ -12,7 +10,9 @@ Style/StringLiteralsInInterpolation:
   EnforcedStyle: single_quotes
 
 Layout/LineLength:
-  Max: 200
+  Max: 250
+  Exclude:
+    - spec/shared_data.rb
 
 Style/FrozenStringLiteralComment:
   Enabled: true
@@ -37,7 +37,9 @@ Metrics/PerceivedComplexity:
   Max: 15
 
 Metrics/BlockLength:
-  Max: 80
+  Max: 250
+  Exclude:
+    - spec/shared_data.rb
 
 Metrics/ClassLength:
   Max: 250
